--- a/image.html
+++ b/image.html
@@ -5,15 +5,44 @@
     </head>
     <body>
         <style>
-        a {position: absolute;
-        right: 0px;}
         form {text-align: center;
-        padding: 70px 0}
+        padding: 150px 0;}
+
+        div {text-align: center;
+        color: blue;
+        font-family: "sofia","sans-serif";
+        font-size:50px;
+        background-image: url('https://upload.wikimedia.org/wikipedia/en/thumb/a/ae/Flag_of_the_United_Kingdom.svg/1200px-Flag_of_the_United_Kingdom.svg.png');
+        background-position: bottom;
+        position: center;
+        }
+
+        a {position: absolute;
+        right: 0px;
+        font-size: 20px;
+        }
+
+        #inp1 {
+        border-radius: 25px;
+        border: 2px solid #000000;
+        padding: 20px;
+        height: -50;
+        width: 400px;
+        }
+
+        #inp2 {border-radius: 25px;
+        border:2px solid #000000;
+        padding: 20px;
+        width: 250px;}
         </style>
+        <div>
         <a href="https://ide-320567f848184db192be0ad328982228-8080.cs50.ws/search.html">Search</a>
-        <form action="https://google.com/images/search">
-            <input type="text" name="q">
-            <input type="submit" value="Google Image Search">
+        <form action="https://www.google.com/images">
+            <h1 id = he1 style="float: left">UK Images</h1>
+            <input id = inp1 type="text" name="q">
+            <br>
+            <input id = inp2 type="submit" value="Search">
         </form>
+        </div>
     </body>
 </html>
